Make jar executable

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,12 @@ group = 'api.kcorp'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'api.kcorp.EmailServicesApplication'
+    }
+}
+
 repositories {
 	mavenCentral()
 }
