--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
+bootJar {
+    launchScript()
+}
+
 group = 'api.kcorp'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
