Addign secrets to an envfile

--- a/deployment/emailservices.service
+++ b/deployment/emailservices.service
@@ -4,7 +4,8 @@ After network.target = auditd.service
 
 [Service]
 Type = simple
-ExecStart = $EMAILSERVICES_HOME/build/libs/emailservices-0.0.1-SNAPSHOT.jar
+EnvironmentFile=/home/emailservices/envfile
+ExecStart = /root/emailservices/build/libs/emailservices-0.0.1-SNAPSHOT.jar
 
 [Install]
 WantedBy = multi-user.target
