Adding SendGrid support

--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,11 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
 	compile('com.fasterxml.jackson.core:jackson-core')
-	compile('org.springframework.boot:spring-boot-starter-mail')
 	compile('org.springframework.boot:spring-boot-starter-activemq')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile("org.apache.activemq:activemq-broker")
     compile("com.fasterxml.jackson.core:jackson-databind")
+	compile('com.sendgrid:sendgrid-java:4.0.1')
     testCompile('org.springframework.boot:spring-boot-starter-aop')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('junit:junit')
