--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,2 @@
-spring.mail.host=${SMTP_SERVER}
-spring.mail.port=587
-spring.mail.username=${EMAIL_USERNAME}
-spring.mail.password=${EMAIL_PASSWORD}
-spring.mail.properties.mail.transport.protocol=smtp
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.sendgrid.api-key=${SENDGRID_API_KEY}
+sender.email=${SENDGRID_SENDER_EMAIL}
